--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-import": "^2.25.4"
   },
   "prettier": {
@@ -24,8 +26,5 @@
     "arrowParens": "avoid",
     "tabWidth": 2,
     "printWidth": 100
-  },
-  "dependencies": {
-    "eslint-import-resolver-typescript": "^2.7.0"
   }
 }
