--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint": "^8.12.0",
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "ts-node": "^10.7.0"
   },
   "prettier": {
     "singleQuote": true,
